@@ -7,6 +7,7 @@ Version 1.0.13
 + annotated TestObjects with ProtoBuf attributes
 + refactored PerformanceMonitor and added HtmlResultPresenter
 + updated internal comments for serializers
++ modified TypeSerializerBuilder to not use additional variable for deserialized object
 
 Version 1.0.12
 -------------------------------------------
